compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/classObject.kt
class C {
    class object {}

    <!CONFLICTING_JVM_DECLARATIONS!>val `object$`<!> = C
}